--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,6 +1,8 @@
 style = IntelliJ
 project.git = true
 
+version = "2.1.1"
+
 maxColumn = 120
 
 danglingParentheses = true
@@ -31,7 +33,7 @@ rewrite.sortModifiers.order = [
   "abstract", "lazy"
 ]
 
-//docStrings = ScalaDoc // @TODO v1.6
+docstrings = ScalaDoc // @TODO v1.6
 assumeStandardLibraryStripMargin = false
 //includeNoParensInSelectChains = false // @TODO v1.6?
 includeCurlyBraceInSelectChains = true
