--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Cache scala dependencies
         uses: coursier/cache-action@v6
       - name: Run tests
-        run: sbt "all test scriptedAll"
+        run: sbt test
         # Optional: This step uploads information to the GitHub dependency graph and unblocking Dependabot alerts for the repository
       - name: Upload dependency graph
         uses: scalacenter/sbt-dependency-submission@v2
