--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -19,6 +19,9 @@ fileOverride {
   "glob:**/src/main/scala-3/**" {
     runner.dialect = scala3
   }
+  "glob:**/src/test/scala-3/**" {
+    runner.dialect = scala3
+  }
 }
 
 rewrite.rules = [RedundantBraces, RedundantParens, SortModifiers, PreferCurlyFors, Imports]
